--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pwops",
-  "version":"0.0.1",
-  "description":"CSS-in-JS, from JS - the easy way",
+  "version": "0.0.1",
+  "description": "CSS-in-JS, from JS - the easy way",
   "keywords": [
     "css-in-js",
     "styled-components",
@@ -15,7 +15,7 @@
     "email": "info@flatland.be",
     "url": "https://leny.me"
   },
-  "homepage":"https://github.com/leny/pwops",
+  "homepage": "https://github.com/leny/pwops",
   "repository": {
     "type": "git",
     "url": "git://github.com/leny/pwops.git"
@@ -35,7 +35,18 @@
   "main": "lib/index.js",
   "scripts": {
     "build": "npx babel src --out-dir lib",
-    "lint":"npx eslint --fix --cache src"
+    "lint": "npx eslint --fix --cache src"
+  },
+  "lint-staged": {
+    "*.js": [
+      "npx eslint --fix --cache",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npx lint-staged"
+    }
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
@@ -46,6 +57,8 @@
     "eslint": "^5.15.0",
     "eslint-plugin-prettier": "^3.0.1",
     "mocha": "^6.0.2",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.4",
     "prettier": "^1.10.2"
   }
 }
