--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -34,6 +34,7 @@
   ],
   "main": "lib/index.js",
   "scripts": {
+    "prepare": "node scripts/extract-mdn-data.js",
     "build": "npx babel src --out-dir lib",
     "lint": "npx eslint --fix --cache src"
   },
@@ -56,9 +57,13 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.15.0",
     "eslint-plugin-prettier": "^3.0.1",
-    "mocha": "^6.0.2",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.4",
+    "mdn-data": "^2.0.1",
+    "mocha": "^6.0.2",
     "prettier": "^1.10.2"
+  },
+  "dependencies": {
+    "camelcase": "^5.2.0"
   }
 }
