Implement units functions

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -36,6 +36,8 @@
   "scripts": {
     "prepare": "node scripts/extract-mdn-data.js",
     "build": "npx babel src --out-dir lib",
+    "pretest": "npm run prepare && npm run build",
+    "test": "npx mocha --require @babel/register",
     "lint": "npx eslint --fix --cache src"
   },
   "lint-staged": {
@@ -53,6 +55,7 @@
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.3.3",
     "@babel/preset-env": "^7.3.1",
+    "@babel/register": "^7.0.0",
     "assert": "^1.4.1",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.15.0",
