--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@pwops/core",
   "version": "0.0.1",
-  "description": "CSS-in-JS, from JS - the easy way",
+  "description": "Core package for pwops, agnostic CSS-in-JS facilitator",
   "keywords": [
     "css-in-js",
     "styled-components",
@@ -16,22 +16,14 @@
     "url": "https://leny.me"
   },
   "homepage": "https://github.com/leny/pwops",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/leny/pwops.git"
-  },
+  "repository": "https://github.com/leny/pwops/tree/master/packages/core",
   "files": [
     "lib"
   ],
   "bugs": {
-    "url": "https://github.com/leny/pwopw/issues"
+    "url": "https://github.com/leny/pwops/issues"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/leny/pwops/blob/master/LICENSE"
-    }
-  ],
+  "license":"MIT",
   "main": "lib/index.js",
   "scripts": {
     "prepare": "node scripts/extract-mdn-data.js",
