--- a/packages/mixins/package.json
+++ b/packages/mixins/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pwops/mixins",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "description": "Mixins for pwops, agnostic CSS-in-JS facilitator",
   "keywords": [
     "css-in-js",
@@ -27,9 +27,8 @@
   "license": "MIT",
   "main": "lib/index.js",
   "scripts": {
-    "prepare": "node scripts/extract-mdn-data.js",
     "build": "npx babel src --out-dir lib",
-    "pretest": "npm run prepare && npm run build",
+    "pretest": "npm run build",
     "test": "npx mocha --require @babel/register",
     "lint": "npx eslint --fix --cache src"
   },
@@ -55,12 +54,14 @@
     "eslint-plugin-prettier": "^3.0.1",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.4",
-    "mdn-data": "^2.0.1",
     "mocha": "^6.0.2",
+    "@pwops/core": "^0.0.0",
     "prettier": "^1.10.2"
   },
   "dependencies": {
-    "camelcase": "^5.2.0",
     "lodash.frompairs": "^4.0.1"
+  },
+  "peerDependencies":{
+    "@pwops/core": "^0.0.0"
   }
 }
