Clean package.json

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -61,5 +61,8 @@
   "dependencies": {
     "camelcase": "^5.2.0",
     "lodash.frompairs": "^4.0.1"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
