--- a/packages/mixins/.prettierrc
+++ b/packages/mixins/.prettierrc
@@ -3,5 +3,14 @@
     "tabWidth": 4,
     "trailingComma": "all",
     "bracketSpacing": false,
-    "jsxBracketSameLine": true
+    "jsxBracketSameLine": true,
+    "overrides": [
+        {
+            "files": "*.json",
+            "options": {
+                "tabWidth": 2
+
+            }
+        }
+    ]
 }
