--- a/packages/emotion-css/package.json
+++ b/packages/emotion-css/package.json
@@ -23,10 +23,13 @@
     "url": "https://github.com/leny/pwops/issues"
   },
   "license": "MIT",
-  "main": "lib/index.js",
+  "main": "lib/cjs/index.js",
+  "module": "lib/esm/index.js",
   "scripts": {
     "prepublishOnly": "npx babel src --out-dir lib",
-    "build": "npx babel src --out-dir lib",
+    "build:cjs": "npx babel src --env-name cjs --out-dir lib/cjs",
+    "build:esm": "npx babel src --env-name esm --out-dir lib/esm",
+    "build": "npm run build:cjs && npm run build:esm",
     "lint": "npx eslint --fix --cache src"
   },
   "lint-staged": {
