--- a/packages/mixins/package.json
+++ b/packages/mixins/package.json
@@ -25,9 +25,12 @@
     "url": "https://github.com/leny/pwops/issues"
   },
   "license": "MIT",
-  "main": "lib/index.js",
+  "main": "lib/cjs/index.js",
+  "module": "lib/esm/index.js",
   "scripts": {
-    "build": "npx babel src --out-dir lib",
+    "build:cjs": "npx babel src --env-name cjs --out-dir lib/cjs",
+    "build:esm": "npx babel src --env-name esm --out-dir lib/esm",
+    "build": "npm run build:cjs && npm run build:esm",
     "pretest": "npm run build",
     "test": "npx mocha --require @babel/register",
     "lint": "npx eslint --fix --cache src"
