--- a/packages/mixins/.babelrc
+++ b/packages/mixins/.babelrc
@@ -1,4 +1,23 @@
 {
+  "env": {
+    "cjs": {
+      "presets": [["@babel/preset-env", {"useBuiltIns": "usage", "corejs":"3","modules": "cjs"}]]
+    },
+    "esm": {
+      "presets": [
+        [
+          "@babel/preset-env",
+          {
+            "modules": false,
+            "useBuiltIns": "usage", "corejs":"3",
+            "targets": {
+              "esmodules": true
+            }
+          }
+        ]
+      ]
+    }
+  },
   "presets": [
     [
       "@babel/preset-env",
