--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pwops/core",
-  "version": "0.0.0",
+  "version": "0.1.2",
   "description": "Core package for pwops, agnostic CSS-in-JS facilitator",
   "keywords": [
     "css-in-js",
@@ -24,10 +24,13 @@
     "url": "https://github.com/leny/pwops/issues"
   },
   "license": "MIT",
-  "main": "lib/index.js",
+  "main": "lib/cjs/index.js",
+  "module": "lib/esm/index.js",
   "scripts": {
     "prepare": "node scripts/extract-mdn-data.js",
-    "build": "npx babel src --out-dir lib",
+    "build:cjs": "npx babel src --env-name cjs --out-dir lib/cjs",
+    "build:esm": "npx babel src --env-name esm --out-dir lib/esm",
+    "build": "npm run build:cjs && npm run build:esm",
     "pretest": "npm run prepare && npm run build",
     "test": "npx mocha --require @babel/register",
     "lint": "npx eslint --fix --cache src"
@@ -44,22 +47,24 @@
     }
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.3.3",
-    "@babel/preset-env": "^7.3.1",
-    "@babel/register": "^7.0.0",
+    "@babel/cli": "^7.4.3",
+    "@babel/core": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "@babel/register": "^7.4.0",
     "assert": "^1.4.1",
     "babel-eslint": "^10.0.1",
-    "eslint": "^5.15.0",
+    "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.0.1",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.4",
-    "mdn-data": "^2.0.1",
+    "mdn-data": "^2.0.2",
     "mocha": "^6.0.2",
     "prettier": "^1.10.2"
   },
   "dependencies": {
-    "camelcase": "^5.2.0",
+    "@babel/polyfill": "^7.4.4",
+    "camelcase": "^5.3.1",
+    "core-js": "^3.1.2",
     "lodash.frompairs": "^4.0.1"
   },
   "publishConfig": {
