--- a/packages/emotion-css/package.json
+++ b/packages/emotion-css/package.json
@@ -60,7 +60,9 @@
     "access": "public"
   },
   "dependencies": {
-    "@emotion/css": "^10.0.9"
+    "@babel/polyfill": "^7.4.4",
+    "@emotion/css": "^10.0.9",
+    "core-js": "^3.1.2"
   },
   "gitHead": "f31f343b9740e15df457904b454dd29b97d52e7a"
 }
