Fix mess in builds

--- a/packages/core/.babelrc
+++ b/packages/core/.babelrc
@@ -4,7 +4,7 @@
             "presets": [
                 [
                     "@babel/preset-env",
-                    {"useBuiltIns": "usage", "corejs": "3", "modules": "cjs"}
+                    {"modules": "cjs"}
                 ]
             ]
         },
@@ -14,8 +14,6 @@
                     "@babel/preset-env",
                     {
                         "modules": false,
-                        "useBuiltIns": "usage",
-                        "corejs": "3",
                         "targets": {
                             "esmodules": true
                         }
