--- a/packages/emotion-css/package.json
+++ b/packages/emotion-css/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pwops/emotion-css",
-  "version": "0.0.1",
+  "version": "0.1.3",
   "description": "Emotion's css method, wrapped by pwops, agnostic CSS-in-JS facilitator",
   "keywords": [
     "css-in-js",
@@ -45,7 +45,7 @@
     "@babel/core": "^7.3.3",
     "@babel/preset-env": "^7.3.1",
     "@babel/register": "^7.0.0",
-    "@pwops/core": "^0.0.1",
+    "@pwops/core": "^0.1.3",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.15.0",
     "eslint-plugin-prettier": "^3.0.1",
@@ -60,9 +60,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.4.4",
-    "@emotion/css": "^10.0.9",
-    "core-js": "^3.1.2"
+    "@emotion/css": "^10.0.9"
   },
   "gitHead": "f31f343b9740e15df457904b454dd29b97d52e7a"
 }
