--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   },
   "lint-staged": {
     "*.js": [
-      "npx eslint --fix --cache",
-      "git add"
+      "npx eslint --fix --cache"
     ]
   },
   "husky": {
