--- a/packages/mixins/package.json
+++ b/packages/mixins/package.json
@@ -37,8 +37,7 @@
   },
   "lint-staged": {
     "*.js": [
-      "npx eslint --fix --cache",
-      "git add"
+      "npx eslint --fix --cache"
     ]
   },
   "husky": {
