Fix package name

--- a/packages/react-hooks/package.json
+++ b/packages/react-hooks/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-hooks",
+  "name": "@pwops/react-hooks",
   "version": "0.1.5",
   "description": "React hooks for pwops, agnostic CSS-in-JS facilitator",
   "keywords": [
